Fix desktop breakpoint, Add desktop animation

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -65987,3 +65987,470 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   white-space: nowrap !important;
   width: 1px !important;
 }
+
+._kapps0l {
+    -webkit-box-direction: normal !important;
+    -webkit-box-orient: vertical !important;
+    height: auto !important;
+    overflow: hidden !important;
+    display: flex !important;
+    flex-direction: column !important;
+    transition-property: all !important;
+    transition-duration: 0.5s !important;
+    transition-delay: 0s !important;
+    border-width: 1px !important;
+    border-style: solid !important;
+    border-color: transparent transparent transparent rgb(235, 235, 235) !important;
+    border-image: initial !important;
+}
+
+@media (min-width: 375px) {
+  ._kapps0l {
+    -webkit-box-direction: normal !important;
+    -webkit-box-orient: vertical !important;
+    height: auto !important;
+    overflow: hidden !important;
+    display: flex !important;
+    flex-direction: column !important;
+    transition-property: all !important;
+    transition-duration: 0.5s !important;
+    transition-delay: 0s !important;
+    border-width: 1px !important;
+    border-style: solid !important;
+    border-color: transparent transparent transparent rgb(235, 235, 235) !important;
+    border-image: initial !important;
+  }
+}
+
+@media (min-width: 744px) {
+  ._kapps0l {
+    -webkit-box-direction: normal !important;
+    -webkit-box-orient: vertical !important;
+    height: auto !important;
+    overflow: hidden !important;
+    display: flex !important;
+    flex-direction: column !important;
+    transition-property: all !important;
+    transition-duration: 0.5s !important;
+    transition-delay: 0s !important;
+    border-width: 1px !important;
+    border-style: solid !important;
+    border-color: transparent transparent transparent rgb(235, 235, 235) !important;
+    border-image: initial !important;
+  }
+}
+
+@media (min-width: 1128px) {
+  ._kapps0l {
+    -webkit-box-direction: normal !important;
+    -webkit-box-orient: vertical !important;
+    height: auto !important;
+    overflow: hidden !important;
+    display: flex !important;
+    flex-direction: column !important;
+    transition-property: all !important;
+    transition-duration: 0.5s !important;
+    transition-delay: 0s !important;
+    border: 1px solid transparent !important;
+    flex: 1 1 0% !important;
+  }
+}
+
+@media (min-width: 1128px),
+@supports (--custom: properties) {
+  ._kapps0l {
+    flex: 0 0 var(--orbital-panel-width-lg) !important;
+  }
+}
+
+._1y2ftwql {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  height: auto !important;
+  overflow: hidden !important;
+  display: flex !important;
+  flex-direction: column !important;
+  transition-property: all !important;
+  transition-duration: 0.5s !important;
+  transition-delay: 0s !important;
+  border-width: 1px !important;
+  border-style: solid !important;
+  border-color: transparent transparent transparent rgb(235, 235, 235) !important;
+  border-image: initial !important;
+}
+
+@media (min-width: 375px) {
+  ._1y2ftwql {
+    -webkit-box-direction: normal !important;
+    -webkit-box-orient: vertical !important;
+    height: auto !important;
+    overflow: hidden !important;
+    display: flex !important;
+    flex-direction: column !important;
+    transition-property: all !important;
+    transition-duration: 0.5s !important;
+    transition-delay: 0s !important;
+    border-width: 1px !important;
+    border-style: solid !important;
+    border-color: transparent transparent transparent rgb(235, 235, 235) !important;
+    border-image: initial !important;
+  }
+}
+
+@media (min-width: 744px) {
+  ._1y2ftwql {
+    -webkit-box-direction: normal !important;
+    -webkit-box-orient: vertical !important;
+    height: auto !important;
+    overflow: hidden !important;
+    display: flex !important;
+    flex-direction: column !important;
+    transition-property: all !important;
+    transition-duration: 0.5s !important;
+    transition-delay: 0s !important;
+    border-width: 1px !important;
+    border-style: solid !important;
+    border-color: transparent transparent transparent rgb(235, 235, 235) !important;
+    border-image: initial !important;
+  }
+}
+
+@media (min-width: 1128px) {
+  ._1y2ftwql {
+    -webkit-box-direction: normal !important;
+    -webkit-box-orient: vertical !important;
+    height: auto !important;
+    overflow: hidden !important;
+    display: flex !important;
+    flex-direction: column !important;
+    transition-property: all !important;
+    transition-duration: 0.5s !important;
+    transition-delay: 0s !important;
+    border-width: 1px !important;
+    border-style: solid !important;
+    border-color: transparent transparent transparent rgb(235, 235, 235) !important;
+    border-image: initial !important;
+    flex: 1 1 0% !important;
+  }
+}
+
+@media (min-width: 1128px),
+@supports (--custom: properties) {
+  ._1y2ftwql {
+    flex: 1 1 0% !important;
+  }
+}
+
+._ekd2cho {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  height: auto !important;
+  overflow: hidden !important;
+  display: flex !important;
+  flex-direction: column !important;
+  transition-property: all !important;
+  transition-duration: 0.5s !important;
+  transition-delay: 0s !important;
+  border-width: 1px !important;
+  border-style: solid !important;
+  border-color: transparent transparent transparent rgb(235, 235, 235) !important;
+  border-image: initial !important;
+}
+
+@media (min-width: 375px) {
+  ._ekd2cho {
+    -webkit-box-direction: normal !important;
+    -webkit-box-orient: vertical !important;
+    height: auto !important;
+    overflow: hidden !important;
+    display: flex !important;
+    flex-direction: column !important;
+    transition-property: all !important;
+    transition-duration: 0.5s !important;
+    transition-delay: 0s !important;
+    border-width: 1px !important;
+    border-style: solid !important;
+    border-color: transparent transparent transparent rgb(235, 235, 235) !important;
+    border-image: initial !important;
+  }
+}
+
+@media (min-width: 744px) {
+  ._ekd2cho {
+    -webkit-box-direction: normal !important;
+    -webkit-box-orient: vertical !important;
+    height: auto !important;
+    overflow: hidden !important;
+    display: flex !important;
+    flex-direction: column !important;
+    transition-property: all !important;
+    transition-duration: 0.5s !important;
+    transition-delay: 0s !important;
+    border-width: 1px !important;
+    border-style: solid !important;
+    border-color: transparent transparent transparent rgb(235, 235, 235) !important;
+    border-image: initial !important;
+  }
+}
+
+@media (min-width: 1128px) {
+  ._ekd2cho {
+    -webkit-box-direction: normal !important;
+    -webkit-box-orient: vertical !important;
+    height: auto !important;
+    overflow: hidden !important;
+    display: flex !important;
+    flex-direction: column !important;
+    transition-property: all !important;
+    transition-duration: 0.5s !important;
+    transition-delay: 0s !important;
+    border-width: 1px !important;
+    border-style: solid !important;
+    border-color: transparent transparent transparent rgb(235, 235, 235) !important;
+    border-image: initial !important;
+    flex: 1 1 0% !important;
+  }
+}
+
+@media (min-width: 1128px),
+@supports (--custom: properties) {
+  ._ekd2cho {
+    flex: 0 0 var(--orbital-panel-width-lg) !important;
+  }
+}
+
+._1fls1kdh {
+  height: 100% !important;
+  overflow: hidden !important;
+}
+
+@media(min-width: 375px) {
+  ._1fls1kdh {
+    height: 100% !important;
+    overflow: hidden !important;
+  }
+}
+
+@media(min-width: 744px) {
+  ._1fls1kdh {
+    height: 100% !important;
+    overflow: hidden !important;
+    opacity: 0 !important;
+    transition-property: opacity !important;
+    transition-duration: 0.5s !important;
+    transition-delay: 0ms !important;
+  }
+}
+
+._1qf4j2qh {
+  height: 100% !important;
+  overflow: hidden !important;
+}
+
+@media(min-width: 375px) {
+  ._1qf4j2qh {
+    height: 100% !important;
+    overflow: hidden !important;
+  }
+}
+
+@media(min-width: 744px) {
+  ._1qf4j2qh {
+    height: 100% !important;
+    overflow: hidden !important;
+    opacity: 1 !important;
+    transition-property: opacity !important;
+    transition-duration: 0.5s !important;
+    transition-delay: 0ms !important;
+  }
+}
+
+._o8ljzwp {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  height: auto !important;
+  overflow: hidden !important;
+  display: flex !important;
+  flex-direction: column !important;
+  transition-property: all !important;
+  transition-duration: 0.5s !important;
+  transition-delay: 0s !important;
+  border-width: 1px !important;
+  border-style: solid !important;
+  border-color: transparent transparent transparent rgb(235, 235, 235) !important;
+  border-image: initial !important;
+}
+
+@media (min-width: 375px) {
+  ._o8ljzwp {
+    -webkit-box-direction: normal !important;
+    -webkit-box-orient: vertical !important;
+    height: auto !important;
+    overflow: hidden !important;
+    display: flex !important;
+    flex-direction: column !important;
+    transition-property: all !important;
+    transition-duration: 0.5s !important;
+    transition-delay: 0s !important;
+    border-width: 1px !important;
+    border-style: solid !important;
+    border-color: transparent transparent transparent rgb(235, 235, 235) !important;
+    border-image: initial !important;
+  }
+}
+
+@media (min-width: 744px) {
+  ._o8ljzwp {
+    -webkit-box-direction: normal !important;
+    -webkit-box-orient: vertical !important;
+    height: auto !important;
+    overflow: hidden !important;
+    display: flex !important;
+    flex-direction: column !important;
+    transition-property: all !important;
+    transition-duration: 0.5s !important;
+    transition-delay: 0s !important;
+    border-width: 1px !important;
+    border-style: solid !important;
+    border-color: transparent transparent transparent rgb(235, 235, 235) !important;
+    border-image: initial !important;
+  }
+}
+
+@media (min-width: 1128px) {
+  ._o8ljzwp {
+    -webkit-box-direction: normal !important;
+    -webkit-box-orient: vertical !important;
+    height: auto !important;
+    overflow: hidden !important;
+    display: flex !important;
+    flex-direction: column !important;
+    transition-property: all !important;
+    transition-duration: 0.5s !important;
+    transition-delay: 0s !important;
+    border-width: 1px !important;
+    border-style: solid !important;
+    border-color: transparent transparent transparent rgb(235, 235, 235) !important;
+    border-image: initial !important;
+  }
+}
+
+@media (min-width: 1440px) {
+  ._o8ljzwp {
+    -webkit-box-direction: normal !important;
+    -webkit-box-orient: vertical !important;
+    height: auto !important;
+    overflow: hidden !important;
+    display: flex !important;
+    flex-direction: column !important;
+    transition-property: all !important;
+    transition-duration: 0.5s !important;
+    transition-delay: 0s !important;
+    border-top: 1px solid transparent !important;
+    border-right: 1px solid transparent !important;
+    border-bottom: 1px solid transparent !important;
+    border-image: initial !important;
+    flex: 0 1 0% !important;
+    border-left: none !important;
+  }
+}
+
+@media (min-width: 1440px),
+@supports (--custom: properties) {
+  ._o8ljzwp {
+    flex: 0 1 0% !important;
+  }
+}
+
+._phfc55f {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  height: auto !important;
+  overflow: hidden !important;
+  display: flex !important;
+  flex-direction: column !important;
+  transition-property: all !important;
+  transition-duration: 0.5s !important;
+  transition-delay: 0s !important;
+  border-width: 1px !important;
+  border-style: solid !important;
+  border-color: transparent transparent transparent rgb(235, 235, 235) !important;
+  border-image: initial !important;
+}
+
+@media (min-width: 375px) {
+  ._phfc55f {
+    -webkit-box-direction: normal !important;
+    -webkit-box-orient: vertical !important;
+    height: auto !important;
+    overflow: hidden !important;
+    display: flex !important;
+    flex-direction: column !important;
+    transition-property: all !important;
+    transition-duration: 0.5s !important;
+    transition-delay: 0s !important;
+    border-width: 1px !important;
+    border-style: solid !important;
+    border-color: transparent transparent transparent rgb(235, 235, 235) !important;
+    border-image: initial !important;
+  }
+}
+
+@media (min-width: 744px) {
+  ._phfc55f {
+    -webkit-box-direction: normal !important;
+    -webkit-box-orient: vertical !important;
+    height: auto !important;
+    overflow: hidden !important;
+    display: flex !important;
+    flex-direction: column !important;
+    transition-property: all !important;
+    transition-duration: 0.5s !important;
+    transition-delay: 0s !important;
+    border: 1px solid transparent !important;
+    flex: 1 1 0% !important;
+  }
+}
+
+@media (min-width: 744px),
+@supports (--custom: properties) {
+  ._phfc55f {
+    flex: 1 1 0% !important;
+  }
+}
+
+._1obz29zo {
+  height: 100% !important;
+  overflow: hidden !important;
+}
+
+@media (min-width: 375px) {
+  ._1obz29zo {
+    height: 100% !important;
+    overflow: hidden !important;
+  }
+}
+
+@media (min-width: 744px) {
+  ._1obz29zo {
+    height: 100% !important;
+    overflow: hidden !important;
+  }
+}
+
+@media (min-width: 1128px) {
+  ._1obz29zo {
+    height: 100% !important;
+    overflow: hidden !important;
+  }
+}
+
+@media (min-width: 1440px) {
+  ._1obz29zo {
+    height: 100% !important;
+    overflow: hidden !important;
+    opacity: 0 !important;
+    transition-duration: 150ms !important;
+    transition-delay: 0ms !important;
+  }
+}
