--- a/assets/css/bugs.css
+++ b/assets/css/bugs.css
@@ -62,3 +62,90 @@
     width: 100%;
     -webkit-box-sizing: unset !important;
 }
+
+.dir.t4tcady[class][class] {
+    margin: var(--kksqe-v) -24px;
+}
+
+@media (min-width: 744px) {
+    .dir.t4tcady[class][class] {
+        margin-left: 0;
+        margin-right: 0;
+    }
+}
+
+.swzp880[class][class] {
+    width: 100%;
+    overflow: auto;
+}
+
+@media (min-width: 744px) {
+    .swzp880[class][class] {
+        overflow: inherit;
+    }
+}
+
+.dir.c1keg1ue[class][class] {
+    padding: 0 24px;
+}
+
+@media (min-width: 744px) {
+    .dir.c1keg1ue[class][class] {
+        padding: 0;
+    }
+}
+
+.c1keg1ue[class][class] {
+    width: 523px;
+}
+
+@media (min-width: 744px) {
+    .c1keg1ue[class][class] {
+        width: auto;
+    }
+}
+
+.dir.c1keg1ue[class][class] table {
+    border: 1px solid var(--j-qkgmf);
+}
+
+.c1keg1ue[class][class] table {
+    border-collapse: collapse;
+    width: 100%;
+    table-layout: auto;
+}
+
+.dir.c1keg1ue[class][class] td {
+    border: 1px solid var(--j-qkgmf);
+    padding: var(--jaa-ni-h);
+}
+
+.c1keg1ue[class][class] td {
+    color: var(--f-k-smk-x);
+    font-size: var(--iw-ehf-f);
+    line-height: var(---s-l-myu);
+    font-weight: var(--e-y-j-d-v-j);
+}
+
+.dir.c1keg1ue[class][class] p {
+    margin: 0;
+}
+
+.dir-ltr.c1keg1ue[class][class] th {
+    text-align: left;
+}
+.dir.c1keg1ue[class][class] th {
+    border: 1px solid var(--j-qkgmf);
+    padding: var(--jaa-ni-h);
+}
+.c1keg1ue[class][class] th {
+    color: var(--f-k-smk-x);
+    font-size: var(--f-cv-j-j-p);
+    line-height: var(--f-l-h-bac);
+    font-weight: var(--h-oqhch);
+    text-transform: uppercase;
+}
+
+.caoewxn[class][class] {
+    display: flex;
+}
