--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -61439,7 +61439,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   -webkit-flex-wrap: nowrap !important;
   -ms-flex-wrap: nowrap !important;
   flex-wrap: nowrap !important;
-  overflow-x: hidden !important;
+  overflow-x: auto !important;
   overflow-y: hidden !important;
   -ms-overflow-y: hidden !important;
 }
@@ -66453,102 +66453,4 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     transition-duration: 150ms !important;
     transition-delay: 0ms !important;
   }
-
-._du78a1u {
-  -webkit-box-align: center !important;
-  -ms-flex-align: center !important;
-  display: -webkit-box !important;
-  display: -moz-box !important;
-  display: -ms-flexbox !important;
-  display: -webkit-flex !important;
-  display: flex !important;
-  -webkit-align-items: center !important;
-  align-items: center !important;
-  padding-left: 16px !important;
-  padding-right: 16px !important;
-  z-index: 1 !important;
-  background: none !important;
-  left: 0px !important;
-  padding: 25px 13px !important;
-  position: absolute !important;
-  right: 0px !important;
-  top: 0px !important;
-  height: 68px !important;
-  padding-top: 16px !important;
-}
-
-._kv14gss {
-    margin-right: auto !important;
-    overflow: visible !important;
-}
-
-._11ml4fm {
-  -webkit-box-pack: center !important;
-  -ms-flex-pack: center !important;
-  -webkit-box-align: center !important;
-  -ms-flex-align: center !important;
-  -webkit-appearance: none !important;
-  -moz-appearance: none !important;
-  appearance: none !important;
-  display: -webkit-inline-box !important;
-  display: -moz-inline-box !important;
-  display: -ms-inline-flexbox !important;
-  display: -webkit-inline-flex !important;
-  display: inline-flex !important;
-  border-radius: 50% !important;
-  border: 0 !important;
-  outline: none !important;
-  margin: 0px !important;
-  padding: 0px !important;
-  color: #222222 !important;
-  background-color: #FFFFFF !important;
-  cursor: pointer !important;
-  -ms-touch-action: manipulation !important;
-  touch-action: manipulation !important;
-  -webkit-align-items: center !important;
-  align-items: center !important;
-  -webkit-justify-content: center !important;
-  justify-content: center !important;
-  border-style: solid !important;
-  border-width: 1px !important;
-  background-clip: padding-box !important;
-  border-color: rgba(0, 0, 0, 0.08) !important;
-  box-shadow: 0px 0px 0px 1px transparent, 0px 0px 0px 4px transparent, 0px 2px 4px rgb(0 0 0 / 18%) !important;
-  -webkit-transition: -webkit-transform 0.25s ease,transform 0.25s ease !important;
-  -moz-transition: transform 0.25s ease !important;
-  transition: -ms-transform 0.25s ease,-webkit-transform 0.25s ease,transform 0.25s ease !important;
-  height: 36px !important;
-  width: 36px !important;
-}
-
-._1ran6xy {
-  -webkit-box-align: center !important;
-  -ms-flex-align: center !important;
-  -webkit-flex: 1 !important;
-  -ms-flex: 1 1 0% !important;
-  flex: 1 !important;
-  display: -webkit-box !important;
-  display: -moz-box !important;
-  display: -ms-flexbox !important;
-  display: -webkit-flex !important;
-  display: flex !important;
-  -webkit-align-items: center !important;
-  align-items: center !important;
-  padding-left: 8px !important;
-  padding-right: 8px !important;
-  padding-bottom: 0px !important;
-  padding-top: 0px !important;
-  background-color: transparent !important;
-  border: none !important;
-  color: #222222 !important;
-  max-width: 100% !important;
-}
-
-._1s0b0yb {
-  text-overflow: ellipsis !important;
-  white-space: nowrap !important;
-  overflow: hidden !important;
-  color: #222222 !important;
-  font-size: 14px !important;
-  font-weight: 600 !important;
 }
