--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -50913,7 +50913,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   align-items: center !important;
   width: 100%;
 }
-@media(min-width: 744px) {
+@media (min-width: 744px) {
   ._1xtc178 {
     width: 48.5% !important;
   }
@@ -50957,7 +50957,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   flex-direction: column-reverse;
   width: 100%;
 }
-@media (min-width:744px ) {
+@media (min-width: 744px) {
   ._1pk994 {
     flex-direction: row !important;
     width: auto;
@@ -65989,19 +65989,19 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 }
 
 ._kapps0l {
-    -webkit-box-direction: normal !important;
-    -webkit-box-orient: vertical !important;
-    height: auto !important;
-    overflow: hidden !important;
-    display: flex !important;
-    flex-direction: column !important;
-    transition-property: all !important;
-    transition-duration: 0.5s !important;
-    transition-delay: 0s !important;
-    border-width: 1px !important;
-    border-style: solid !important;
-    border-color: transparent transparent transparent rgb(235, 235, 235) !important;
-    border-image: initial !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  height: auto !important;
+  overflow: hidden !important;
+  display: flex !important;
+  flex-direction: column !important;
+  transition-property: all !important;
+  transition-duration: 0.5s !important;
+  transition-delay: 0s !important;
+  border-width: 1px !important;
+  border-style: solid !important;
+  border-color: transparent transparent transparent rgb(235, 235, 235) !important;
+  border-image: initial !important;
 }
 
 @media (min-width: 375px) {
@@ -66056,8 +66056,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 1128px),
-@supports (--custom: properties) {
+@media (min-width: 1128px), @supports (--custom: properties) {
   ._kapps0l {
     flex: 0 0 var(--orbital-panel-width-lg) !important;
   }
@@ -66134,8 +66133,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 1128px),
-@supports (--custom: properties) {
+@media (min-width: 1128px), @supports (--custom: properties) {
   ._1y2ftwql {
     flex: 1 1 0% !important;
   }
@@ -66212,8 +66210,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 1128px),
-@supports (--custom: properties) {
+@media (min-width: 1128px), @supports (--custom: properties) {
   ._ekd2cho {
     flex: 0 0 var(--orbital-panel-width-lg) !important;
   }
@@ -66224,14 +66221,14 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   overflow: hidden !important;
 }
 
-@media(min-width: 375px) {
+@media (min-width: 375px) {
   ._1fls1kdh {
     height: 100% !important;
     overflow: hidden !important;
   }
 }
 
-@media(min-width: 744px) {
+@media (min-width: 744px) {
   ._1fls1kdh {
     height: 100% !important;
     overflow: hidden !important;
@@ -66247,14 +66244,14 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   overflow: hidden !important;
 }
 
-@media(min-width: 375px) {
+@media (min-width: 375px) {
   ._1qf4j2qh {
     height: 100% !important;
     overflow: hidden !important;
   }
 }
 
-@media(min-width: 744px) {
+@media (min-width: 744px) {
   ._1qf4j2qh {
     height: 100% !important;
     overflow: hidden !important;
@@ -66355,8 +66352,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 1440px),
-@supports (--custom: properties) {
+@media (min-width: 1440px), @supports (--custom: properties) {
   ._o8ljzwp {
     flex: 0 1 0% !important;
   }
@@ -66412,8 +66408,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 744px),
-@supports (--custom: properties) {
+@media (min-width: 744px), @supports (--custom: properties) {
   ._phfc55f {
     flex: 1 1 0% !important;
   }
@@ -66453,4 +66448,88 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     transition-duration: 150ms !important;
     transition-delay: 0ms !important;
   }
+}
+._e0px5r {
+  font-size: 26px !important;
+  line-height: 30px !important;
+  margin-top: 40px !important;
+  margin-bottom: 24px !important;
+  font-weight: 600 !important;
+  color: rgb(34, 34, 34) !important;
+  display: block !important;
+}
+._1ywltba {
+  -webkit-box-align: center !important;
+  display: flex !important;
+  align-items: center !important;
+  margin-top: 24px !important;
+  margin-bottom: 24px !important;
+}
+._1x7xqyv {
+  max-width: 100% !important;
+  width: 64px !important;
+  height: 64px !important;
+  border-radius: 8px !important;
+  display: inline-block !important;
+  object-fit: cover !important;
+  margin-right: 16px !important;
+}
+._9zsv75f {
+  position: relative !important;
+  width: 50% !important;
+  margin-left: 0% !important;
+  margin-right: 0% !important;
+  padding-left: 6px !important;
+  padding-right: 6px !important;
+}
+@media (min-width: 375px) {
+  ._9zsv75f {
+    padding-left: 6px !important;
+    padding-right: 6px !important;
+  }
+}
+@media (min-width: 744px) {
+  ._9zsv75f {
+    width: 50% !important;
+    padding-left: 8px !important;
+    padding-right: 8px !important;
+  }
+}
+@media (min-width: 950px) {
+  ._9zsv75f {
+    padding-left: 8px !important;
+    padding-right: 8px !important;
+  }
+}
+@media (min-width: 1128px) {
+  ._9zsv75f {
+    width: 50% !important;
+    padding-left: 8px !important;
+    padding-right: 8px !important;
+  }
+}
+._1l9dusq {
+  margin-left: 22px !important;
+  margin-right: 22px !important;
+  border-radius: 4px !important;
+  overflow: hidden !important;
+}
+._1xzp9wc {
+  font-size: 16px !important;
+  line-height: 20px !important;
+  font-weight: 600 !important;
+  overflow: hidden !important;
+  color: rgb(34, 34, 34) !important;
+  text-overflow: ellipsis !important;
+}
+._mnf8sq {
+  width: 100% !important;
+  height: 76px !important;
+  outline: none !important;
+  cursor: pointer !important;
+  border: 1px solid rgb(221, 221, 221) !important;
+  border-radius: 12px !important;
+  box-sizing: border-box !important;
+  background: rgb(255, 255, 255) !important;
+  margin-bottom: 16px !important;
 }
