--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -66533,3 +66533,256 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   background: rgb(255, 255, 255) !important;
   margin-bottom: 16px !important;
 }
+._yoj4tg {
+  color: rgb(0, 0, 0) !important;
+  margin: 30px !important;
+}
+._1pcepud {
+  font-size: 24px !important;
+  font-weight: 800 !important;
+  margin-top: 40px !important;
+  margin-bottom: -40px !important;
+}
+._5ojrjv {
+  -webkit-box-align: center !important;
+  display: flex !important;
+  align-items: center !important;
+  width: 1000px !important;
+}
+._1hfu0v {
+  width: 50% !important;
+}
+._153jm2x {
+  padding-bottom: 60px !important;
+}
+._1yf4i4f {
+  position: absolute !important;
+  opacity: 0 !important;
+}
+._rzrgtx {
+  font-size: 14px !important;
+  line-height: 18px !important;
+  font-weight: 400 !important;
+  color: rgb(34, 34, 34) !important;
+}
+._1s02cb9 {
+  font-size: 16px !important;
+  line-height: 20px !important;
+  font-weight: 800 !important;
+  width: 100% !important;
+  margin-bottom: 24px !important;
+}
+._1w648lh {
+  width: 500px !important;
+  font-size: 10px !important;
+  color: rgb(113, 113, 113) !important;
+  margin-bottom: 16px !important;
+}
+._a6xwiw {
+  width: 426px !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  margin-bottom: 32px !important;
+  border-radius: 8px !important;
+}
+._xlzko7 {
+  width: 426px !important;
+}
+._y7ycd {
+  font-size: 12px !important;
+  line-height: 16px !important;
+  font-weight: 800 !important;
+  color: rgb(255, 255, 255) !important;
+  position: relative !important;
+  display: inline-block !important;
+  top: 40px !important;
+  left: 16px !important;
+  z-index: 2 !important;
+  background-color: rgba(0, 0, 0, 0.15) !important;
+  border-radius: 2px !important;
+  padding-left: 8px !important;
+  padding-right: 8px !important;
+  padding-bottom: 2px !important;
+}
+._s65r46 {
+  border: 1px solid rgb(247, 247, 247) !important;
+  background-color: rgb(255, 255, 255) !important;
+  box-shadow: rgb(54 77 93 / 12%) 0px 5px 24px !important;
+}
+._6l2jgh {
+  position: relative !important;
+  border-bottom: 1px solid rgb(221, 221, 221) !important;
+  padding-bottom: 16px !important;
+}
+._60bska {
+  position: relative !important;
+  background: rgb(255, 255, 255) !important;
+  color: rgb(34, 34, 34) !important;
+  height: 100% !important;
+}
+._1gj8xhl {
+  background: rgb(221, 221, 221) !important;
+  width: 100% !important;
+  position: relative !important;
+  z-index: 0 !important;
+}
+._jz36d8 {
+  position: absolute !important;
+  top: 16px !important;
+  right: 16px !important;
+  z-index: 2 !important;
+}
+._1tsvpuw {
+  transform: translateY(0.5px) !important;
+}
+._1trgpf1 {
+  height: 100% !important;
+  position: relative !important;
+  width: 100% !important;
+}
+._12nbptv {
+  position: absolute !important;
+  top: 0px !important;
+  height: 100% !important;
+  width: 100% !important;
+}
+._xkgrb5 {
+  background: linear-gradient(
+    to left,
+    transparent 0%,
+    rgba(0, 0, 0, 0.25) 100%
+  ) !important;
+  position: relative !important;
+  height: 100% !important;
+  width: 25% !important;
+}
+._odag1s {
+  -webkit-box-align: center !important;
+  color: rgb(255, 255, 255) !important;
+  display: flex !important;
+  align-items: center !important;
+  padding-left: 16px !important;
+  height: 100% !important;
+  width: 100% !important;
+}
+._zjlr02 {
+  background: linear-gradient(
+    to right,
+    transparent 0%,
+    rgba(0, 0, 0, 0.25) 100%
+  ) !important;
+  position: absolute !important;
+  top: 0px !important;
+  right: 0px !important;
+  height: 100% !important;
+  width: 25% !important;
+}
+._hjnxmn {
+  -webkit-box-pack: end !important;
+  -webkit-box-align: center !important;
+  color: rgb(255, 255, 255) !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: flex-end !important;
+  padding-right: 16px !important;
+  height: 100% !important;
+  width: 100% !important;
+}
+._16yw3jr {
+  padding-top: 16px !important;
+  margin-left: 16px !important;
+  margin-right: 16px !important;
+}
+._uhmcu9 {
+  display: block !important;
+  color: rgb(34, 34, 34) !important;
+}
+._a5uyci {
+  line-height: 18px !important;
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
+  display: -webkit-box !important;
+  -webkit-line-clamp: 2 !important;
+  -webkit-box-orient: vertical !important;
+  font-size: 14px !important;
+  font-weight: 800 !important;
+}
+._g86r3e {
+  display: inline !important;
+}
+._1g4tb3x {
+  font-size: 14px !important;
+  line-height: 18px !important;
+  font-weight: 400 !important;
+}
+._rca8s0 {
+  margin-top: 4px !important;
+}
+._154iz1b2 {
+  -webkit-box-align: center !important;
+  align-items: center !important;
+  display: flex !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-weight: 400 !important;
+  font-size: 12px !important;
+  line-height: 16px !important;
+}
+._3zgr580 {
+  color: rgb(34, 34, 34) !important;
+  padding-left: 4px !important;
+}
+._m09d1m2 {
+  color: rgb(34, 34, 34) !important;
+}
+._13dglly {
+  -webkit-box-align: center !important;
+  display: flex !important;
+  align-items: center !important;
+  height: 50px !important;
+}
+._ecdkyj {
+  min-height: 1px !important;
+  float: left !important;
+  position: relative !important;
+  width: 54% !important;
+  margin-left: 16px !important;
+}
+._120sz63 {
+  font-size: 12px !important;
+  line-height: 16px !important;
+  font-weight: 600 !important;
+  margin-left: 16px !important;
+}
+._16czla3 {
+  min-height: 1px !important;
+  float: left !important;
+  position: relative !important;
+  width: 33.3% !important;
+}
+._1th9qvgy {
+  float: left !important;
+  position: relative !important;
+  height: 24px !important;
+  left: 136px !important;
+}
+._68lrpj {
+  align-content: flex-start !important;
+}
+.dir.r1pyaok7[class][class] {
+  padding-top: 24px;
+  padding-bottom: 24px;
+  border-radius: 1px;
+  padding-left: 24px;
+  padding-right: 24px;
+}
+.dir.r1pyaok7[class][class] {
+  padding-top: 24px;
+  padding-bottom: 24px;
+  border-radius: 1px;
+  padding-left: 24px;
+  padding-right: 24px;
+}
+._jro6t0 {
+  display: flex !important;
+}
