add space show more modal

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -51622,12 +51622,12 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   --g-lm-u-p: normal;
   --mq-yk-l: 0.04em;
 }
-.c1yo0219[class][class]::before {
+.flex-before-after[class][class]::before {
   display: flex;
   content: '';
 }
 
-.c1yo0219[class][class]::after {
+.flex-before-after[class][class]::after {
   display: flex;
   content: '';
 }
@@ -53294,12 +53294,12 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 .i12vv2t2[class][class] {
   vertical-align: top;
 }
-.c1yo0219[class][class]::before {
+.flex-before-after[class][class]::before {
   display: flex;
   content: '';
 }
 
-.c1yo0219[class][class]::after {
+.flex-before-after[class][class]::after {
   display: flex;
   content: '';
 }
@@ -56165,12 +56165,12 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 .i12vv2t2[class][class] {
   vertical-align: top;
 }
-.c1yo0219[class][class]::before {
+.flex-before-after[class][class]::before {
   display: flex;
   content: '';
 }
 
-.c1yo0219[class][class]::after {
+.flex-before-after[class][class]::after {
   display: flex;
   content: '';
 }
@@ -57383,12 +57383,12 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 .i12vv2t2[class][class] {
   vertical-align: top;
 }
-.c1yo0219[class][class]::before {
+.flex-before-after[class][class]::before {
   display: flex;
   content: '';
 }
 
-.c1yo0219[class][class]::after {
+.flex-before-after[class][class]::after {
   display: flex;
   content: '';
 }
@@ -58819,12 +58819,12 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 .i12vv2t2[class][class] {
   vertical-align: top;
 }
-.c1yo0219[class][class]::before {
+.flex-before-after[class][class]::before {
   display: flex;
   content: '';
 }
 
-.c1yo0219[class][class]::after {
+.flex-before-after[class][class]::after {
   display: flex;
   content: '';
 }
@@ -60406,12 +60406,12 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 .i12vv2t2[class][class] {
   vertical-align: top;
 }
-.c1yo0219[class][class]::before {
+.flex-before-after[class][class]::before {
   display: flex;
   content: '';
 }
 
-.c1yo0219[class][class]::after {
+.flex-before-after[class][class]::after {
   display: flex;
   content: '';
 }
@@ -67628,4 +67628,32 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   .dir.l1gyhzo5[class][class] {
     margin-top: var(--jhzm-v-t);
   }
+}
+._1jza0fl {
+  flex: 1 1 auto !important;
+  overflow: auto !important;
+  padding: 0px 24px !important;
+}
+._8pghme8 {
+  color: rgb(34, 34, 34) !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-weight: 400 !important;
+  outline: none !important;
+  position: relative !important;
+}
+._68a6l8 {
+  font-size: 26px !important;
+  line-height: 30px !important;
+  font-weight: 800 !important;
+  margin-bottom: 32px !important;
+}
+._178zopn {
+  font-size: 16px !important;
+  line-height: 24px !important;
+  word-break: break-word !important;
+  margin-bottom: 24px !important;
+}
+._pgfqnw {
+  font-weight: 600 !important;
 }
