--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -67657,3 +67657,51 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 ._pgfqnw {
   font-weight: 600 !important;
 }
+._1kb5zmd {
+  color: rgb(34, 34, 34) !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-weight: 600 !important;
+  font-size: 22px !important;
+  line-height: 26px !important;
+  margin-bottom: 32px !important;
+}
+._ak5d0on {
+  color: rgb(34, 34, 34) !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-weight: 600 !important;
+  font-size: 18px !important;
+  line-height: 22px !important;
+  margin-bottom: 0px !important;
+  padding-bottom: 16px !important;
+  padding-top: 16px !important;
+}
+._11jhslp {
+  margin-top: -16px !important;
+  margin-bottom: 48px !important;
+}
+._1lwleztw {
+  position: relative !important;
+  width: 100% !important;
+  margin-left: 0% !important;
+  margin-right: 0% !important;
+  padding-left: 6px !important;
+  padding-right: 6px !important;
+}
+@media (min-width: 375px) {
+  ._1lwleztw {
+    width: 100% !important;
+    padding-left: 6px !important;
+    padding-right: 6px !important;
+  }
+}
+._m5uolq {
+  color: rgb(34, 34, 34) !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-weight: 800 !important;
+  font-size: 26px !important;
+  line-height: 30px !important;
+  margin-bottom: 32px !important;
+}
