--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -42615,8 +42615,6 @@ video::cue {
   justify-content: flex-start !important;
   flex-wrap: wrap !important;
   width: calc(100% + 12px) !important;
-  margin-left: -6px !important;
-  margin-right: -6px !important;
 }
 ._1lkwexi4 {
   display: grid !important;
@@ -42627,8 +42625,6 @@ video::cue {
 }
 @media (min-width: 375px) {
   ._1byskwn {
-    margin-left: -6px !important;
-    margin-right: -6px !important;
     width: calc(100% + 12px) !important;
   }
 }
@@ -61064,13 +61060,9 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   justify-content: flex-start !important;
   flex-wrap: wrap !important;
   width: calc(100% + 12px) !important;
-  margin-left: -6px !important;
-  margin-right: -6px !important;
 }
 @media (min-width: 375px) {
   ._1byskwn {
-    margin-left: -6px !important;
-    margin-right: -6px !important;
     width: calc(100% + 12px) !important;
   }
 }
@@ -67686,14 +67678,10 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   width: 100% !important;
   margin-left: 0% !important;
   margin-right: 0% !important;
-  padding-left: 6px !important;
-  padding-right: 6px !important;
 }
 @media (min-width: 375px) {
   ._1lwleztw {
     width: 100% !important;
-    padding-left: 6px !important;
-    padding-right: 6px !important;
   }
 }
 ._m5uolq {
@@ -67704,4 +67692,22 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   font-size: 26px !important;
   line-height: 30px !important;
   margin-bottom: 32px !important;
+}
+._oes4ik {
+  color: rgb(34, 34, 34) !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-weight: 400 !important;
+  font-size: 16px !important;
+  line-height: 24px !important;
+  margin-bottom: 40px !important;
+}
+._1ahci1n {
+  color: rgb(34, 34, 34) !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-weight: 600 !important;
+  font-size: 18px !important;
+  line-height: 22px !important;
+  margin-bottom: 20px !important;
 }
