fix content type button in topic

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -67711,3 +67711,8 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   line-height: 22px !important;
   margin-bottom: 20px !important;
 }
+._tswrdl1 {
+    display: table-cell !important;
+    vertical-align: middle !important;
+    white-space: nowrap !important;
+}
